[gd_scene load_steps=8 format=3 uid="uid://c38y7vxqm5qxv"]

[ext_resource type="Script" path="res://Scene/UserInterface/pokeslot_edit.gd" id="1_7er3a"]
[ext_resource type="Texture2D" uid="uid://kkqs3yaqtiux" path="res://Assets/Icons/brn.png" id="1_yrlcu"]
[ext_resource type="Texture2D" uid="uid://cdmlt24ha5150" path="res://Assets/Icons/par.png" id="2_g6oqr"]
[ext_resource type="Texture2D" uid="uid://bjmo6wwe6ierr" path="res://Assets/Icons/slp.png" id="3_y2hij"]
[ext_resource type="Texture2D" uid="uid://bl1d5ggdwia75" path="res://Assets/Icons/psn.png" id="4_qbyxg"]
[ext_resource type="Texture2D" uid="uid://b7ccrl7usen2x" path="res://Assets/Icons/tox.png" id="5_ob3w2"]
[ext_resource type="Texture2D" uid="uid://05ww7lyowy7n" path="res://Assets/Icons/frz.png" id="6_48ucq"]

[node name="VBoxContainer" type="VBoxContainer"]
script = ExtResource("1_7er3a")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 6
popup/item_0/text = "Pokemon 1"
popup/item_0/id = 0
popup/item_1/text = "Pokemon 2"
popup/item_1/id = 1
popup/item_2/text = "Pokemon 3"
popup/item_2/id = 2
popup/item_3/text = "Pokemon 4"
popup/item_3/id = 3
popup/item_4/text = "Pokemon 5"
popup/item_4/id = 4
popup/item_5/text = "Pokemon 6"
popup/item_5/id = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "HP"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
value = 100.0

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Status"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer2"]
layout_mode = 2
item_count = 7
selected = 6
popup/item_0/text = "Burn"
popup/item_0/icon = ExtResource("1_yrlcu")
popup/item_0/id = 0
popup/item_1/text = "Para"
popup/item_1/icon = ExtResource("2_g6oqr")
popup/item_1/id = 1
popup/item_2/text = "Sleep"
popup/item_2/icon = ExtResource("3_y2hij")
popup/item_2/id = 2
popup/item_3/text = "Poison"
popup/item_3/icon = ExtResource("4_qbyxg")
popup/item_3/id = 3
popup/item_4/text = "Toxic"
popup/item_4/icon = ExtResource("5_ob3w2")
popup/item_4/id = 4
popup/item_5/text = "Freeze"
popup/item_5/icon = ExtResource("6_48ucq")
popup/item_5/id = 5
popup/item_6/text = "None"
popup/item_6/id = 6

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Commentary"

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="item_selected" from="HBoxContainer2/OptionButton" to="." method="_on_option_status_button_item_selected"]
